crates/format-docx/tests/snapshots/snapshots__simple_table.snap
---
source: crates/format-docx/tests/snapshots.rs
expression: summary(SIMPLE_TABLE)
---
paragraph_count: 11
paragraphs:
  - Paragraph above the table.
  - R1C1
  - R1C2
  - R1C3
  - R2C1
  - R2C2
  - R2C3
  - R3C1
  - R3C2
  - R3C3
  - Paragraph below the table.
